--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.5.1",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.3",
+    "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
