--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
+    "embla-carousel-react": "^8.6.0",
     "geist": "^1.5.1",
     "lucide-react": "^0.562.0",
     "next": "^16.1.3",
