--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "class-variance-authority": "^0.7.1",
@@ -20,6 +21,7 @@
     "drizzle-orm": "^0.45.1",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.5.1",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.562.0",
     "next": "^16.1.3",
     "next-themes": "^0.4.6",
