--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.8.0",
@@ -26,10 +27,14 @@
     "next": "^16.1.3",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.8",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
+    "yahoo-finance2": "^3.11.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
@@ -40,6 +45,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.3",
     "postcss": "^8.5.6",
+    "shadcn": "^3.7.0",
     "tailwindcss": "^3",
     "typescript": "^5.9.3"
   }
